--- a/Traffic_Sign_Classifier.html
+++ b/Traffic_Sign_Classifier.html
@@ -11726,9 +11726,7 @@ body {
 div#notebook {
   overflow: visible;
   border-top: none;
-}
-
-@media print {
+}@media print {
   div.cell {
     display: block;
     page-break-inside: avoid;
@@ -11749,7 +11747,7 @@ div#notebook {
 
 <!-- Loading mathjax macro -->
 <!-- Load mathjax -->
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS_HTML"></script>
     <!-- MathJax configuration -->
     <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
@@ -11773,8 +11771,7 @@ div#notebook {
   <div tabindex="-1" id="notebook" class="border-box-sizing">
     <div class="container" id="notebook-container">
 
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -11790,8 +11787,7 @@ div#notebook {
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -11869,8 +11865,7 @@ div#notebook {
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -11887,8 +11882,7 @@ div#notebook {
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -11938,7 +11932,9 @@ div#notebook {
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>Number of training examples = 34799
@@ -11954,8 +11950,7 @@ Number of classes = 43
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -11963,8 +11958,7 @@ Number of classes = 43
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -11999,7 +11993,9 @@ Number of classes = 43
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 
 
@@ -13402,7 +13398,9 @@ dyAPeMMk818AAAAASUVORK5CYII=
 
 
 <div class="output_area">
+
 <div class="prompt output_prompt">Out[5]:</div>
+
 
 
 <div class="output_html rendered_html output_subarea output_execute_result">
@@ -13683,7 +13681,9 @@ dyAPeMMk818AAAAASUVORK5CYII=
 </div>
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 
 
@@ -14501,7 +14501,9 @@ CCGELkiBKoQQQgghhBBCF6RAFUIIIYQQQgihC/8fVMmNHzVl4t4AAAAASUVORK5CYII=
 </div>
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 
 
@@ -14773,8 +14775,7 @@ LgAAAKXx/wNh4CdWU6AbywAAAABJRU5ErkJggg==
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -14786,8 +14787,7 @@ LgAAAKXx/wNh4CdWU6AbywAAAABJRU5ErkJggg==
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -14807,8 +14807,7 @@ LgAAAKXx/wNh4CdWU6AbywAAAABJRU5ErkJggg==
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -14816,8 +14815,7 @@ LgAAAKXx/wNh4CdWU6AbywAAAABJRU5ErkJggg==
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -14859,7 +14857,9 @@ LgAAAKXx/wNh4CdWU6AbywAAAABJRU5ErkJggg==
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>0.9921875
@@ -14897,7 +14897,9 @@ LgAAAKXx/wNh4CdWU6AbywAAAABJRU5ErkJggg==
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 
 
@@ -16288,8 +16290,7 @@ as8AAAAASUVORK5CYII=
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -16297,8 +16298,7 @@ as8AAAAASUVORK5CYII=
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -16398,8 +16398,7 @@ as8AAAAASUVORK5CYII=
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -16407,8 +16406,7 @@ as8AAAAASUVORK5CYII=
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -16440,8 +16438,7 @@ sets imply underfitting. A high accuracy on the training set but low accuracy on
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -16494,7 +16491,9 @@ sets imply underfitting. A high accuracy on the training set but low accuracy on
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>Training...
@@ -16556,7 +16555,9 @@ Model saved in  ./models/lenet
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>Test Accuracy = 0.937
@@ -16568,8 +16569,7 @@ Model saved in  ./models/lenet
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -16580,8 +16580,7 @@ Model saved in  ./models/lenet
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -16617,7 +16616,9 @@ Model saved in  ./models/lenet
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>[&#39;pre_img5.jpg&#39;, &#39;img4.jpg&#39;, &#39;img3.png&#39;, &#39;img2.jpg&#39;, &#39;pre_img3.png&#39;, &#39;.ipynb_checkpoints&#39;, &#39;pre_img1.png&#39;, &#39;pre_img4.jpg&#39;, &#39;img5.jpg&#39;, &#39;pre_img2.jpg&#39;, &#39;img1.png&#39;]
@@ -16627,7 +16628,9 @@ Model saved in  ./models/lenet
 </div>
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 
 
@@ -17091,8 +17094,7 @@ Tms/9xgxYsT4byVmPxAjRowYpyGx4B4jRowYpyGx4B4jRowYpyGx4B4jRowYpyGx4B4jRowYpyGx
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -17160,7 +17162,9 @@ Tms/9xgxYsT4byVmPxAjRowYpyGx4B4jRowYpyGx4B4jRowYpyGx4B4jRowYpyGx4B4jRowYpyGx
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>./traffic-signs-data/online_pic/pre_img4.jpg
@@ -17182,7 +17186,9 @@ img shape is: (32, 32, 3)
 </div>
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 
 
@@ -17537,8 +17543,7 @@ WcAdcsghh4YoOQu4Qw455NAQJWcBd8ghhxwaouQs4A455JBDQ5ScBdwhhxxyaIjS/wPkzjXFJio0
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -17568,7 +17573,9 @@ WcAdcsghh4YoOQu4Qw455NAQJWcBd8ghhxwaouQs4A455JBDQ5ScBdwhhxxyaIjS/wPkzjXFJio0
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>(5, 32, 32, 3)
@@ -17612,7 +17619,9 @@ WcAdcsghh4YoOQu4Qw455NAQJWcBd8ghhxwaouQs4A455JBDQ5ScBdwhhxxyaIjS/wPkzjXFJio0
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>(5, 43)
@@ -17624,7 +17633,9 @@ Their names are respectively: [&#39;Speed limit (50km/h)&#39; &#39;Yield&#39; &#
 </div>
 
 <div class="output_area">
+
 <div class="prompt output_prompt">Out[15]:</div>
+
 
 
 <div class="output_html rendered_html output_subarea output_execute_result">
@@ -17680,16 +17691,11 @@ Their names are respectively: [&#39;Speed limit (50km/h)&#39; &#39;Yield&#39; &#
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src="attachment:image.png" alt="image.png">
-Their predicted results from right to left are respectively:['Priority road' 'Speed limit (60km/h)' 'Speed limit (60km/h)'
- 'Speed limit (50km/h)' 'Turn right ahead']</p>
-<h1 id="Are-the-predictions-right?">Are the predictions right?<a class="anchor-link" href="#Are-the-predictions-right?">&#182;</a></h1><p><strong> To judge the effectiveness of predictions, firstly I must be clear what does the SignName look like in my training set. Hence, first of all, I show images of these sign names, that is 'Speed limit (60km/h)'(ClassId:3), 'Speed limit (50km/h)'(ClassId:2),'Turn right ahead'(ClassId:33) and 'Priority road'(ClassId:12).</strong></p>
-<p>From the showed images above, I would like to say that maybe only the first one ('Speed limit (60km/h)') is rightly predicted. So the accuracy is 0%.</p>
+<p><img src="attachment:image.png" alt="image.png"></p>
 
 </div>
 </div>
@@ -17746,7 +17752,9 @@ Their predicted results from right to left are respectively:['Priority road' 'Sp
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>Speed limit (50km/h)(ClassId:2) Looks like:
@@ -17758,7 +17766,9 @@ Yield(ClassId:13)Looks like:
 </div>
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 
 
@@ -18172,7 +18182,9 @@ oIACCriEUQjiBRRQQAGXMP4f2JXkF1NnK8UAAAAASUVORK5CYII=
 </div>
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 
 
@@ -18545,7 +18557,9 @@ I0aM8xhxEI8RI0aM8xhxEI8RI0aM8xhxEI8RI0aM8xhxEI8RI0aM8xhxEI8RI0aM8xhxEI8RI0aM
 </div>
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 
 
@@ -18931,7 +18945,9 @@ SUVORK5CYII=
 </div>
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 
 
@@ -19290,48 +19306,7 @@ BvEQIUKEGMIIg3iIECFCDGGEQTxEiBAhhjDCIB4iRIgQQxj/B3uYmlyd8FEqAAAAAElFTkSuQmCC
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
-</div>
-<div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="Analyze-Performance">Analyze Performance<a class="anchor-link" href="#Analyze-Performance">&#182;</a></h3>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing code_cell rendered">
-<div class="input">
-<div class="prompt input_prompt">In&nbsp;[20]:</div>
-<div class="inner_cell">
-    <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1">### Calculate the accuracy for these 5 new images. </span>
-<span class="c1">### For example, if the model predicted 1 out of 5 signs correctly, it&#39;s 20% accurate on these new images.</span>
-<span class="nb">print</span><span class="p">(</span><span class="s1">&#39;accuracy is </span><span class="si">{}</span><span class="s1">%&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="mi">0</span><span class="o">/</span><span class="mi">5</span><span class="o">*</span><span class="mi">100</span><span class="p">))</span>
-</pre></div>
-
-</div>
-</div>
-</div>
-
-<div class="output_wrapper">
-<div class="output">
-
-
-<div class="output_area">
-<div class="prompt"></div>
-
-<div class="output_subarea output_stream output_stdout output_text">
-<pre>accuracy is 0.0%
-</pre>
-</div>
-</div>
-
-</div>
-</div>
-
-</div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -19339,8 +19314,7 @@ BvEQIUKEGMIIg3iIECFCDGGEQTxEiBAhhjDCIB4iRIgQQxj/B3uYmlyd8FEqAAAAAElFTkSuQmCC
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -19417,7 +19391,9 @@ a = np.array([[ 0.24879643,  0.07032244,  0.12641572,  0.34763842,  0.07893497,
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>v_max_softmax classID is [ 2 13 33 12 13]
@@ -19440,7 +19416,9 @@ top5 prediction is TopKV2(values=array([[  1.00000000e+00,   7.90461196e-10,   9
 </div>
 
 <div class="output_area">
+
 <div class="prompt output_prompt">Out[21]:</div>
+
 
 
 <div class="output_html rendered_html output_subarea output_execute_result">
@@ -19496,8 +19474,7 @@ top5 prediction is TopKV2(values=array([[  1.00000000e+00,   7.90461196e-10,   9
 </div>
 
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -19506,8 +19483,7 @@ top5 prediction is TopKV2(values=array([[  1.00000000e+00,   7.90461196e-10,   9
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -19518,8 +19494,7 @@ top5 prediction is TopKV2(values=array([[  1.00000000e+00,   7.90461196e-10,   9
 </div>
 </div>
 </div>
-<div class="cell border-box-sizing text_cell rendered">
-<div class="prompt input_prompt">
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
@@ -19609,7 +19584,9 @@ top5 prediction is TopKV2(values=array([[  1.00000000e+00,   7.90461196e-10,   9
 
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 <div class="output_subarea output_stream output_stdout output_text">
 <pre>(32, 32, 3)
@@ -19619,7 +19596,9 @@ float32
 </div>
 
 <div class="output_area">
+
 <div class="prompt"></div>
+
 
 
 
